--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "esri-leaflet": "^2.2.3"
   },
   "devDependencies": {
-    "@stencil/core": "0.12.4",
+    "@stencil/core": "^0.17.0",
+    "@types/esri-leaflet": "^2.1.4",
     "@types/jest": "^23.3.1",
     "@types/leaflet": "^1.2.11",
-    "@types/esri-leaflet": "^2.1.4",
     "jest": "^23.4.2"
   },
   "jest": {
