--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "dependencies": {
     "leaflet": "^1.3.4",
-    "esri-leaflet": "^2.2.3"
+    "esri-leaflet": "^2.2.3",
+    "cryptiles": ">=4.1.2"
   },
   "devDependencies": {
     "@stencil/core": "^0.17.0",
